test/corpus/term_tuple.txt
================================================================================
empty
================================================================================

{}

--------------------------------------------------------------------------------

(source_file
  (expression
    (tuple)))

================================================================================
tuple of size 1
================================================================================

{1}

--------------------------------------------------------------------------------

(source_file
  (expression
    (tuple
      (expression
        (integer)))))

================================================================================
pair
================================================================================

{1, a}

--------------------------------------------------------------------------------

(source_file
  (expression
    (tuple
      (expression
        (integer))
      (expression
        (atom
          (unquoted_atom))))))

================================================================================
triplet
================================================================================

{1, a, <<"!">>}

--------------------------------------------------------------------------------

(source_file
  (expression
    (tuple
      (expression
        (integer))
      (expression
        (atom
          (unquoted_atom)))
      (expression
        (binary_string
          (bin_part
            (string)))))))

================================================================================
quad
================================================================================

{1, a, <<"!">>, $j}

--------------------------------------------------------------------------------

(source_file
  (expression
    (tuple
      (expression
        (integer))
      (expression
        (atom
          (unquoted_atom)))
      (expression
        (binary_string
          (bin_part
            (string))))
      (expression
        (char)))))

================================================================================
nested tuples
================================================================================

{ok, {1, {}}}

--------------------------------------------------------------------------------

(source_file
  (expression
    (tuple
      (expression
        (atom
          (unquoted_atom)))
      (expression
        (tuple
          (expression
            (integer))
          (expression
            (tuple)))))))
